--- a/README
+++ b/README
@@ -18,4 +18,5 @@ Here are list of question which i solved and uploaded:
 6) Implementation of doubly linked list ? Solution- DLL.cpp
 7) Implementation of cicular linked list ? Solution- CLL.cpp
 8) Implementation of stack using array ? Solution- stack.cpp
-9) Implementation of Queue ? Solution - Queue.cpp
+9) Implementation of Queue using array? Solution - Queue.cpp
+10) Binary search implementation ? solution - BINSRCH.CPP
