--- a/README
+++ b/README
@@ -19,4 +19,5 @@ Here are list of question which i solved and uploaded:
 7) Implementation of cicular linked list ? Solution- CLL.cpp
 8) Implementation of stack using array ? Solution- stack.cpp
 9) Implementation of Queue using array? Solution - Queue.cpp
-10) Binary search implementation ? solution - BINSRCH.CPP
+10) Implementation of priority Queue ? Solution - PRTYQ.cpp  
+11) Binary search implementation ? solution - BINSRCH.CPP
