--- a/README
+++ b/README
@@ -21,3 +21,4 @@ Here are list of question which i solved and uploaded:
 9) Implementation of Queue using array? Solution - Queue.cpp
 10) Implementation of priority Queue ? Solution - PRTYQ.cpp  
 11) Binary search implementation ? solution - BINSRCH.CPP
+12)Implementation of Quick Sort Algorithm ? Solution- QUICKSOR.CPP
